Fix: Forçar inclusão da capa e atualização do tex

--- a/src/livro.tex
+++ b/src/livro.tex
@@ -161,8 +161,7 @@ fonttitle=\bfseries,
 \begin{titlepage}
   \thispagestyle{empty}
   \centering
-  \includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{capa_livro.png}%
-\end{titlepage}
+\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{capa_livro.png}\end{titlepage}
 
 \restoregeometry      
 
