Fix: Ajuste de motor de compilação e caminho da imagem

--- a/src/livro.tex
+++ b/src/livro.tex
@@ -159,9 +159,10 @@ fonttitle=\bfseries,
 \newgeometry{margin=0pt} 
 
 \begin{titlepage}
-  \thispagestyle{empty}
-  \centering
-\includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{capa_livro.png}\end{titlepage}
+    \thispagestyle{empty}
+    \centering
+    \includegraphics[width=\paperwidth,height=\paperheight,keepaspectratio]{./capa_livro.png}%
+\end{titlepage}
 
 \restoregeometry      
 
